--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -42,6 +42,7 @@
                 android:padding="5dp"/>
 
             <ImageView
+                android:id="@+id/search_item_mainScreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_search_normal"
