--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -7,6 +7,20 @@
     tools:context=".ui.UserList"
     android:background="@color/primary_MC_1">
 
+    <TextView
+        android:id="@+id/noItemInMyList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No item in your list"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2"
+        android:textColor="@color/secondary_MC_1"
+        android:fontFamily="@font/opensans_regular"
+        android:textSize="24sp"
+        android:visibility="invisible"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
@@ -16,16 +30,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/back_to_mainScreen_itemDetail"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
-            android:paddingStart="21dp"
-            android:paddingTop="14dp"
-            android:paddingEnd="21dp"
-            android:paddingBottom="14dp"
-            app:srcCompat="@drawable/ic_back_to_previous_logo" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/back_to_mainScreen_itemDetail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:paddingStart="21dp"
+                android:paddingTop="14dp"
+                android:paddingEnd="21dp"
+                android:paddingBottom="14dp"
+                app:srcCompat="@drawable/ic_back_to_previous_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="My List"
+                android:textColor="@color/grey_MC_100"
+                android:gravity="center_vertical"
+                android:textSize="22sp"
+                android:alpha=".8"
+                android:fontFamily="@font/nunito_regular"/>
+        </LinearLayout>
+
+
+
+
+
 
         <LinearLayout
             android:layout_width="wrap_content"
