--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -43,27 +43,35 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginEnd="15dp">
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_search_normal" />
-
-                <TextView
+                <SearchView
+                    android:id="@+id/search_bar_Search_item"
                     android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_height="35dp"
+                    android:hint="Chicken"
+                    android:fontFamily="@font/nunito_regular"
+                    android:textColor="@color/grey_MC_100"
+                    android:textColorHint="@color/grey_MC_100"
+                    android:gravity="center_vertical"
+                    android:textSize="20sp"
+                    android:layout_marginStart="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageView"
                     app:layout_constraintTop_toTopOf="parent" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_search_item"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/primary_MC_1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
