--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -10,58 +10,57 @@
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:backgroundTint="#0F0F0D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/logo_mainScreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|start"
+            android:paddingStart="21dp"
+            android:paddingTop="14dp"
+            android:paddingEnd="21dp"
+            android:paddingBottom="14dp"
+            app:srcCompat="@drawable/ic_group_13" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|end"
+            android:layout_marginEnd="20dp"
+            android:divider="@drawable/empty_tall_divider"
+            android:orientation="horizontal"
+            android:showDividers="middle">
 
             <ImageView
-                android:id="@+id/back_to_mainScreen_SearchItem"
+                android:id="@+id/addItem_mainScreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|start"
-                android:paddingStart="21dp"
-                android:paddingTop="14dp"
-                android:paddingEnd="21dp"
-                android:paddingBottom="14dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_back_to_previous_logo" />
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_plus_sign_mainscreen" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/search_box"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/back_to_mainScreen_SearchItem"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="15dp">
+            <ImageView
+                android:id="@+id/search_item_mainScreen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_search_selected" />
 
-                <SearchView
-                    android:id="@+id/search_bar_Search_item"
-                    android:layout_width="0dp"
-                    android:layout_height="35dp"
-                    android:hint="Chicken"
-                    android:fontFamily="@font/nunito_regular"
-                    android:textColor="@color/grey_MC_100"
-                    android:textColorHint="@color/grey_MC_100"
-                    android:gravity="center_vertical"
-                    android:textSize="20sp"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/itemCart_mainScreen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_frame_48" />
 
+        </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
