--- a/app/src/main/res/layout/activity_user_cart.xml
+++ b/app/src/main/res/layout/activity_user_cart.xml
@@ -61,6 +61,7 @@
                 app:srcCompat="@drawable/ic_plus_sign_mainscreen" />
 
             <ImageView
+                android:id="@+id/search_user_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
