--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -36,7 +36,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/back_to_mainScreen_itemDetail"
+                android:id="@+id/back_to_mainScreen_userList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|start"
@@ -57,11 +57,6 @@
                 android:fontFamily="@font/nunito_regular"/>
         </LinearLayout>
 
-
-
-
-
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,19 +67,21 @@
             android:showDividers="middle">
 
             <ImageView
-                android:id="@+id/addItem_item_detail"
+                android:id="@+id/addItem_user_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 app:srcCompat="@drawable/ic_plus_sign_mainscreen" />
 
             <ImageView
+                android:id="@+id/searchItem_user_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 app:srcCompat="@drawable/ic_search_normal" />
 
             <ImageView
+                android:id="@+id/cartItem_user_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
